Fix horizontal spacing of 'About Us' page text.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -480,7 +480,7 @@ body {
 
   .about__post__container {
     padding-left: 3rem;
-    padding-right: 8rem;
+    padding-right: 3rem;
   }
 }
 
